@startuml

title __VISITOR's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        class DetailVisitor {
            - time : LocalDateTime
            - details : Map<String, String>
            + DetailVisitor()
            + getDetails()
            - createDetailsMap()
            + hasDetails()
            + visitProjectOrganizer()
            + visitProject()
            + visitTask()
            + visitClock()
            + visitTimeSpan()
            + visitUserManager()
            + visitUser()
            + visitAvailabilityPeriod()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        interface Entity {
            {abstract} + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        class ExportVisitor {
            + ExportVisitor()
            + visitProjectOrganizer()
            + visitProject()
            + visitTask()
            + visitClock()
            + visitTimeSpan()
            + visitUserManager()
            + visitUser()
            + visitAvailabilityPeriod()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        interface Visitor {
            {abstract} + visitProjectOrganizer()
            {abstract} + visitProject()
            {abstract} + visitTask()
            {abstract} + visitClock()
            {abstract} + visitTimeSpan()
            {abstract} + visitUserManager()
            {abstract} + visitUser()
            {abstract} + visitAvailabilityPeriod()
        }
      }
    }
  }
  

  DetailVisitor -up-|> Visitor
  ExportVisitor -up-|> Visitor
  ExportVisitor o-- XmlObject : root


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
